# xml_parsed

./: CMakeLists.txt  LICENSE  README.md  main.cpp  test.cpp  xml_doc_copy.cpp  xml_doc_size.cpp  xml_doc_wrap.cpp  xml_parsed.h
files/: simple.xml
